--- a/project 4.html
+++ b/project 4.html
@@ -107,7 +107,7 @@
 											</ul>	  
 
 											<p><center><i>If you would like to see the Red Tag Data Entry System in more detail, download it<a href="documents/Alex Vandenberg Red Tag GUI Project.xlsm" target="_blank"> here</a>.</i></center></p>
-											<p><center><i><a href="project 3.html">Previous</a></i> /  <i><a href="resume.html">Next</a></i></center></p>
+											<p><center><i><a href="project 3.html">Previous</a></i>
 							</section>
 
 					</div>
