--- a/project 1.html
+++ b/project 1.html
@@ -21,10 +21,10 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">About Me</a></li>
-							<li class="active"><a href="project 1.html">Project 1</a></li>
-							<li><a href="project 2.html">Project 2</a></li>
-							<li><a href="project 3.html">Project 3</a></li>
-							<li><a href="project 4.html">Project 4</a></li>
+							<li class="active"><a href="project 1.html">CNC Chip Auger</a></li>
+							<li><a href="project 2.html">Heating Core</a></li>
+							<li><a href="project 3.html">CFD Hotspot</a></li>
+							<li><a href="project 4.html">Data Entry</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="mailto: vandenberg.a@northeastern.edu" target="_blank">Email </a></li>
