--- a/project 1.html
+++ b/project 1.html
@@ -22,9 +22,9 @@
 						<ul class="links">
 							<li><a href="index.html">About Me</a></li>
 							<li class="active"><a href="project 1.html">CNC Chip Remover</a></li>
-							<li><a href="project 2.html">Heating Core Redesign</a></li>
-							<li><a href="project 3.html">CFD Hotspot Locations</a></li>
-							<li><a href="project 4.html">Data Entry System</a></li>
+							<li><a href="project 2.html">Heating Core</a></li>
+							<li><a href="project 3.html">CFD Hotspots</a></li>
+							<li><a href="project 4.html">Data Entry</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="mailto: vandenberg.a@northeastern.edu" target="_blank">Email </a></li>
